# grasp_learning

./: .gitignore  CMakeLists.txt  LICENSE.txt  README.md  README_ICRA2017.txt  package.xml
AtestCollisionAvoidance/: ModelRBF__yest-xtest_40  be1.csv  be1_0.csv  be1_0_simulated.csv  be1_simulated.csv  be2.csv  be2_0.csv  be2_0_simulated.csv  be2_simulated.csv  be3.csv  be3_0.csv  be3_0_simulated.csv  be3_simulated.csv  be4.csv  be4_simulated.csv  be5.csv  be5_0.csv  be5_0_simulated.csv  be5_simulated.csv  be6.csv  be6_0.csv  be6_0_simulated.csv  be6_simulated.csv  be7_0.csv  be7_0_simulated.csv  be7_simulated.csv  box_db  box_db_0_simulated.csv  box_db_pop_complete  box_db_pop_complete.csv  box_db_quality_PGR  box_db_quality_PGR_matlab  box_db_quality_PGR_matlab_  box_db_quality_PGR_matlab_pos  box_db_quality_PGR_pos  box_db_quality_box_PGR  box_db_quality_only_not_zero  box_db_simulated.csv  box_estimate  box_estimate.csv  (+45 more)
MFG/: Manuel  Manuel_discrete_side_10  Manuelito  box_db_10  box_db_10_.csv  box_db_10__0_simulated.csv  box_db_10__simulated.csv  box_db_20  box_db_20_.csv  box_db_20__0_simulated.csv  box_db_20__simulated.csv  box_db_quality_PGR  box_db_quality_PGR_matlab  box_db_quality_PGR_matlab_pos  box_db_quality_PGR_pos  box_db_quality_box_PGR  box_db_quality_only_not_zero  box_db_quality_only_pgr  disc.csv  disc_centerbox_discr_angle.csv  discbox_discr_angle.csv  discbox_discr_angle_0.csv  discbox_discr_angle_0_simulated.csv  discbox_discr_angle_simulated.csv  prova.csv  prova_0.csv  prova_0_simulated.csv  prova_simulated.csv
bicchiere/: box_db.csv  box_db_0.csv  box_db_0_simulated.csv
bottiglia/: box_db.csv  box_db_0.csv  box_db_0_simulated.csv  box_db_simulated.csv
box/: box_db_5__0_simulated.csv  box_db_5__simulated.csv
box_005/: model_5
box_005020/: box_db  box_db.csv  box_db_0.csv  box_db_0_filtered_0.csv  box_db_0_simulated.csv  box_db_pop_complete  box_db_pop_complete.csv  box_db_quality_PGR_matlab  box_db_quality_PGR_matlab_pos  box_db_quality_PGR_pos  box_db_quality_box_PGR  box_db_quality_only_not_zero  box_db_quality_only_pgr  box_db_simulated.csv  box_estimate  box_estimate.csv
box_007/: model_box_007_4_1e-06
box_db_1/: best_grasp_simulated.csv  box_db_pop  box_db_quality_PGR  box_db_quality_PGR_matlab  box_db_quality_box_PGR  box_db_quality_only_not_zero  box_db_simulated_0.csv  box_db_simulated_0_simulated.csv  box_db_simulated_simulated.csv
box_db_1_test/: box_db_0_simulated.csv  box_db_5_0_simulated.csv  box_db_5_simulated.csv  box_db_quality_PGR_pos  box_db_quality_only_pgr  box_db_simulated.csv
box_db_1_test_0/: box_db.csv  box_db_0.csv  box_db_0_simulated.csv  box_db_simulated.csv
box_db_1_test_1/: box_db_0_simulated.csv  box_db_simulated.csv
box_db_2/: best_grasp_422_0.csv  best_grasp_422_0_simulated.csv  box_db.csv  box_db_pop  box_db_quality_PGR_matlab  box_db_quality_only_not_zero
box_db_4/: best_grasp_0.csv  box_db_0_simulated.csv  box_db_pop  box_db_quality_PGR_matlab  box_db_quality_box_PGR  box_db_quality_only_not_zero  box_db_quality_only_pgr  box_db_simulated.csv
box_db_n_test/: box_db_1.csv  box_db_1_simulated.csv  box_db_simulated.csv
box_db_n_test_1/: box_db.csv  box_db_0.csv  box_db_0_simulated.csv  box_db_simulated.csv
box_db_n_test_2/: box_db.csv  box_db_0_simulated.csv  box_db_simulated.csv
box_db_n_test_3/: box_db_simulated.csv
box_db_one/: box_db_0.csv
box_db_two/: box_db_0_simulated.csv
box_estimate/: box1estbox_estimate
config/: vito_controllers.yaml  vito_controllers_soma.yaml
db/: box_db.csv  box_db_1.csv  box_db_10.csv  box_db_11.csv  box_db_11_00.csv  box_db_11_00_simulated.csv  box_db_11_01.csv  box_db_11_01_simulated.csv  box_db_11_02.csv  box_db_11_03.csv  box_db_11_03_simulated.csv  box_db_11_04.csv  box_db_11_04_simulated.csv  box_db_11_05.csv  box_db_11_05_simulated.csv  box_db_11_06.csv  box_db_11_06_simulated.csv  box_db_11_07.csv  box_db_11_07_simulated.csv  box_db_11_08.csv  box_db_11_09.csv  box_db_11_09_simulated.csv  box_db_11_10.csv  box_db_11_10_simulated.csv  box_db_11_simulated.csv  box_db_12.csv  box_db_12_simulated.csv  box_db_13.csv  box_db_1_0.csv  box_db_1_0_simulated.csv  box_db_1_1.csv  box_db_1_1_simulated.csv  box_db_1_2.csv  box_db_1_2_simulated.csv  box_db_1_3.csv  box_db_1_3_simulated.csv  box_db_1_4.csv  box_db_1_4_simulated.csv  box_db_1_5.csv  box_db_1_5_simulated.csv  (+61 more)
db_boxs/: box_db_quality  box_db_quality_box
db_bug/: box_db_x.csv  box_db_x_0.csv  box_db_x_2.csv  box_db_x_5_simulated.csv  box_db_x_6.csv  box_db_x_6_simulated.csv  box_db_x_8_simulated.csv  box_db_x_9.csv  box_db_x_9_simulated.csv  box_db_x_simulated (copia).csv  box_db_x_simulated.csv
db_new/: box_db_00_simulated.csv  box_db_02.csv  box_db_02_simulated.csv  box_db_03.csv  box_db_04_simulated.csv  box_db_06_simulated.csv  box_db_19.csv  box_db_23.csv  box_db_x (copy).csv  box_db_x.csv  box_db_x_0.csv  box_db_x_0_simulated.csv  box_db_x_1.csv  box_db_x_simulated.csv  box_db_y.csv  box_db_y_0_simulated.csv  box_db_y_1_simulated.csv  box_db_y_2_simulated.csv  box_db_y_3.csv  box_db_y_3_simulated.csv  box_db_y_4_simulated.csv  box_db_y_6.csv  box_db_y_6_simulated.csv  box_db_y_7_simulated.csv  box_db_y_simulated.csv
db_new_simulated/: box_db_01_simulated.csv  box_db_08_simulated.csv  box_db_10_simulated.csv  box_db_12_simulated.csv
db_new_simulated_quality/: box_db_00_quality.txt  box_db_01_quality.txt  box_db_02_quality.txt  box_db_03_quality.txt  box_db_04_quality.txt  box_db_06_quality.txt  box_db_07_quality.txt  box_db_08_quality.txt  box_db_10_quality.txt  box_db_12_quality.txt  half_simulated
db_quality/: README  box_db_quality.txt  box_db_quality_1.txt
db_simulated/: box_db_01_simulated.csv  box_db_02_simulated.csv  box_db_03_simulated.csv  box_db_09_simulated.csv  box_db_11_simulated.csv  box_db_19_simulated.csv  box_db_26_simulated.csv  box_db_pop  box_db_quality_only_not_zero
db_simulated_original/: box_db_00_simulated.csv  box_db_01.csv  box_db_04.csv  box_db_05.csv  box_db_12.csv  box_db_12_simulated.csv  box_db_13.csv  box_db_14.csv  box_db_15_simulated.csv  (+7 more)
(+2073 files in other folders)
